Fixed settings and button colors on mobile hopefully

--- a/public/styles.css
+++ b/public/styles.css
@@ -198,12 +198,13 @@ nav a.accent-link {
 }
 
 /* Button Styles */
-button {
+button, form button {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 150px;
     height: 50px;
+    color: black;
     background-color: #CCCCCC;
     border: none;
     border-radius: 50px;
@@ -331,9 +332,35 @@ i {
 .user-info {
     display: flex;
     flex-direction: column;
+    align-items: center;
     color: white;
-    margin: 2em;
     gap: 10px;
+    margin-top: 4em;
+}
+
+.user-info form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+}
+
+.user-info form input {
+    padding: 1em;
+    border: none;
+    border-radius: 10px;
+    background: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+    font-size: 13px;
+}
+
+.user-info form input::placeholder {
+    color: #fff;
+}
+
+.user-info form input:focus {
+    outline: none;
 }
 
 /* Template Styles */
